Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <button id='heart' > ❤️ </button>
   <button id='pause' onclick="myFunction()" > pause </button>
 
-  <ul class='likes'>
+  <ul class='likes' id='likes1'>
   </ul>
 
   <div>
